Update CORS configuration in main.ts and vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -14,12 +14,15 @@
                               "dest": "src/main.ts",
                               "methods": [
                                         "GET",
-                                        "HEAD",
-                                        "PUT",
-                                        "PATCH",
                                         "POST",
-                                        "DELETE"
-                              ]
+                                        "PUT",
+                                        "DELETE",
+                                        "PATCH",
+                                        "OPTIONS"
+                              ],
+                              "headers": {
+                                        "Access-Control-Allow-Origin": "*"
+                              }
                     }
           ]
 }
